# OpenCV-Head-Detection

./: CDetection.cpp  CDetection.h  CMakeLists.txt  README.md  main.cpp
